client full screen test

--- a/client/src/components/app/app.scss
+++ b/client/src/components/app/app.scss
@@ -73,9 +73,12 @@ $gradient: radial-gradient(103.1% 103.1% at 47.74% 108.93%, #D400F7 18.23%, #FF3
     }
 
     .close {
+      position: absolute;
+      top: 20px;
+      right: 20px;
       cursor: pointer;
-      width: 40px;
-      height: 40px;
+      width: 24px;
+      height: 24px;
       mask-image: url('../../images/close.svg');
       mask-size: 100%;
       transition: background 200ms;
