--- a/client/src/components/app/app.scss
+++ b/client/src/components/app/app.scss
@@ -124,6 +124,10 @@ header {
         font-size: 18px;
         line-height: 20px;
       }
+      .user-avatar {
+        width: 20px;
+        height: 20px;
+      }
     }
   }
 
@@ -139,8 +143,8 @@ header {
     text-align: center;
 
     .label, .user-name {
-      transition: font 200ms ease-in-out;
       margin-top: 1px;
+      transition: font 200ms ease-in-out;
       font: 600 10px/14px $fontMain;
       color: $background;
     }
@@ -151,8 +155,17 @@ header {
     }
 
     .user-avatar {
-      display: none;
-      margin-right: 10px;
+      width: 10px;
+      height: 10px;
+      border-radius: 10px;
+      overflow: hidden;
+      position: absolute;
+      left: 10px;
+      img {
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+      }
     }
 
     .user-name {
@@ -162,6 +175,8 @@ header {
 
   .profile {
     width: auto;
+    padding-left: 40px;
+    position: relative;
   }
 }
 
