--- a/client/src/components/app.scss
+++ b/client/src/components/app.scss
@@ -91,7 +91,7 @@ $gradient: radial-gradient(103.1% 103.1% at 47.74% 108.93%, #D400F7 18.23%, #FF3
       cursor: pointer;
       width: 24px;
       height: 24px;
-      mask-image: url('../../images/close.svg');
+      mask-image: url('../images/close.svg');
       mask-size: 100%;
       transition: background 200ms;
       background: $background;
@@ -164,6 +164,52 @@ header {
   }
 }
 
+.stock {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  padding-top: 40px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  .stock-card {
+    cursor: pointer;
+    position: relative;
+    width: 160px;
+    height: 160px;
+    background: $light;
+    border-radius: 10px;
+    .logo {
+      width: 100%;
+      height: 100%;
+      border-radius: 10px;
+      background: url("../images/logo.svg");
+      background-repeat: no-repeat;
+      background-position: 50%;
+      background-size: 80%;
+    }
+    &.self {}
+    &.users {
+      margin-left: 80px;
+      .logo {
+        background-repeat: repeat;
+        background-size: 25%;
+      }
+    }
+    .subtitle {
+      position: absolute;
+      width: 100%;
+      bottom: -30px;
+      left: 0;
+      font: 500 14px/20px $fontMain;
+      color: $background;
+      text-align: center;
+    }
+  }
+}
+
 .main {
   position: fixed;
   display: flex;
@@ -177,7 +223,7 @@ header {
   .logo {
     width: 100%;
     height: 300px;
-    background: url("../../images/logo.svg");
+    background: url("../images/logo.svg");
     background-repeat: no-repeat;
     background-position: 50%;
     background-size: contain;
@@ -462,28 +508,28 @@ footer {
 
         &.github {
           background-color: $dark;
-          mask-image: url("../../images/github.svg");
+          mask-image: url("../images/github.svg");
           mask-size: cover;
           -webkit-mask-size: cover;
         }
 
         &.telega {
           background-color: $dark;
-          mask-image: url("../../images/telega.svg");
+          mask-image: url("../images/telega.svg");
           mask-size: cover;
           -webkit-mask-size: cover;
         }
 
         &.vk {
           background-color: $dark;
-          mask-image: url("../../images/vk.svg");
+          mask-image: url("../images/vk.svg");
           mask-size: cover;
           -webkit-mask-size: cover;
         }
 
         &.instagram {
           background-color: $dark;
-          mask-image: url("../../images/instagram.svg");
+          mask-image: url("../images/instagram.svg");
           mask-size: cover;
           -webkit-mask-size: cover;
         }
@@ -527,7 +573,7 @@ footer {
     width: 34px;
     height: 19px;
     background-color: $dark;
-    mask-image: url("../../images/vk-login.svg");
+    mask-image: url("../images/vk-login.svg");
     mask-size: cover;
     -webkit-mask-size: cover;
   }
