--- a/client/src/components/app.scss
+++ b/client/src/components/app.scss
@@ -181,6 +181,12 @@ header {
     height: 160px;
     background: $light;
     border-radius: 10px;
+    background: $background;
+    box-shadow: -12px -20px 56px rgba(232, 237, 243, 0.05), 36px 12px 64px #4B4B4B, inset -16px -6px 80px rgba(248, 249, 249, 0.03);
+    transition: background 200ms;
+    &:hover {
+      background: darken($background, 5%);
+    }
     .logo {
       width: 100%;
       height: 100%;
@@ -195,7 +201,7 @@ header {
       margin-left: 80px;
       .logo {
         background-repeat: repeat;
-        background-size: 25%;
+        background-size: 42%;
       }
     }
     .subtitle {
@@ -595,6 +601,17 @@ footer {
 
 
 @media screen and (max-width: 750px) {
+  .stock {
+    .stock-card {
+      width: 110px;
+      height: 110px;
+      &.users {
+        margin-left: 40px;
+      }
+    }
+  }
+
+
   .main {
     .logo {
       height: 200px;
