--- a/client/src/components/app.scss
+++ b/client/src/components/app.scss
@@ -183,9 +183,9 @@ header {
     border-radius: 10px;
     background: $background;
     box-shadow: -12px -20px 56px rgba(232, 237, 243, 0.05), 36px 12px 64px #4B4B4B, inset -16px -6px 80px rgba(248, 249, 249, 0.03);
-    transition: background 200ms;
+    transition: background 200ms ease;
     &:hover {
-      background: darken($background, 5%);
+      background: lighten($dark, 10%);
     }
     .logo {
       width: 100%;
@@ -567,7 +567,7 @@ footer {
   border-radius: 8px;
   cursor: pointer;
   text-decoration: none;
-  transition: background 200ms ease-in-out;
+  transition: background 200ms ease;
   box-shadow: -12px -20px 56px rgba(232, 237, 243, 0.05), 36px 12px 64px #4B4B4B, inset -16px -6px 80px rgba(248, 249, 249, 0.03);
 
   &:hover {
