--- a/client/src/components/app.scss
+++ b/client/src/components/app.scss
@@ -179,9 +179,8 @@ header {
     position: relative;
     width: 160px;
     height: 160px;
-    background: $light;
     border-radius: 10px;
-    background: $background;
+    //background: $background;
     box-shadow: -12px -20px 56px rgba(232, 237, 243, 0.05), 36px 12px 64px #4B4B4B, inset -16px -6px 80px rgba(248, 249, 249, 0.03);
     transition: background 100ms ease;
     &:hover {
@@ -191,12 +190,17 @@ header {
       width: 100%;
       height: 100%;
       border-radius: 10px;
-      background: url("../images/logo.svg");
+      background: url("../images/logo-no-banner.svg");
       background-repeat: no-repeat;
       background-position: 50%;
       background-size: 80%;
     }
-    &.self {}
+    &.self {
+      .logo {
+        background-position: 55% 80%;
+        background-size: 169%;
+      }
+    }
     &.users {
       margin-left: 80px;
       .logo {
