gallery on work

--- a/client/src/components/app.scss
+++ b/client/src/components/app.scss
@@ -197,8 +197,8 @@ header {
     }
     &.self {
       .logo {
-        background-position: 55% 80%;
-        background-size: 169%;
+        background-position: 53% 80%;
+        background-size: 242%;
       }
     }
     &.users {
@@ -217,6 +217,17 @@ header {
       color: $background;
       text-align: center;
       text-transform: capitalize;
+    }
+    a {
+      display: block;
+      overflow: hidden;
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      outline: none;
+      text-indent: 100%;
     }
   }
 }
