gallery on work

--- a/client/src/components/app.scss
+++ b/client/src/components/app.scss
@@ -598,6 +598,7 @@ footer {
     mask-image: url("../images/vk-login.svg");
     mask-size: cover;
     -webkit-mask-size: cover;
+    box-shadow: inset 2px 2px 8px #101010;
   }
 
   .label {
