--- a/client/src/components/app.scss
+++ b/client/src/components/app.scss
@@ -527,6 +527,7 @@ footer {
         width: 100%;
         height: 100%;
         transition: background-color 100ms ease-in-out;
+        box-shadow: inset 2px 2px 8px #101010;
 
         &.github {
           background-color: $dark;
