--- a/client/src/components/app/app.scss
+++ b/client/src/components/app/app.scss
@@ -574,6 +574,7 @@ footer {
 }
 
 .button {
+  position: relative;
   display: flex;
   flex-direction: row;
   justify-content: center;
@@ -618,6 +619,14 @@ footer {
     bottom: 40px;
     left: 50%;
     margin-left: -90px;
+  }
+
+  a {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
   }
 }
 
