--- a/ui/src/app/components/main/chart/chart.component.html
+++ b/ui/src/app/components/main/chart/chart.component.html
@@ -1,8 +1,8 @@
 <div class="chart-wrapper">
   <div class="chart">
     <div class="chart-card" *ngFor="let user of users" (click)="goToStock(user.vkId)">
-      <div class="logo"> </div>
-      <div class="subtitle">{{user.name}}</div>
+      <div class="avatar"><img src="{{user.avatar}}" alt="{{user.name}}"/></div>
+      <div class="name">{{user.name}}</div>
     </div>
   </div>
 </div>
