--- a/ui/src/app/components/main/chart/chart.component.scss
+++ b/ui/src/app/components/main/chart/chart.component.scss
@@ -1,70 +1,50 @@
 @import "../../../../assets/styles/vars";
 
 .chart-wrapper {
+  min-height: 100vh;
+  width: 100%;
+  padding-top: 52px;
   .chart {
     position: absolute;
     top: 0;
     left: 0;
     width: 100%;
     height: 100%;
-    padding-top: 52px;
     display: flex;
-    justify-content: center;
+    justify-content: flex-start;
     align-items: center;
+    flex-direction: column;
     .chart-card {
       cursor: pointer;
       position: relative;
-      width: 160px;
-      height: 160px;
+      display: flex;
+      justify-content: flex-start;
+      align-items: center;
+      margin-top: 20px;
+      width: 94%;
+      height: 80px;
       border-radius: 10px;
-      //background: $background;
       box-shadow: -12px -20px 56px rgba(232, 237, 243, 0.05), 36px 12px 64px #4B4B4B, inset -16px -6px 80px rgba(248, 249, 249, 0.03);
       transition: background 100ms ease;
       &:hover {
         background: lighten($dark, 10%);
       }
-      .logo {
-        width: 100%;
-        height: 100%;
-        border-radius: 10px;
-        background: url("../../../../assets/images/logo-no-banner.svg");
-        background-repeat: no-repeat;
-        background-position: 50%;
-        background-size: 80%;
-      }
-      &.self {
-        .logo {
-          background-position: 53% 80%;
-          background-size: 242%;
-        }
-      }
-      &.users {
-        margin-left: 80px;
-        .logo {
-          background-repeat: repeat;
-          background-size: 42%;
-        }
-      }
-      .subtitle {
-        position: absolute;
-        width: 100%;
-        bottom: -38px;
-        left: 0;
-        font: 500 18px/20px $fontMain;
-        color: $background;
-        text-align: center;
-        text-transform: capitalize;
-      }
-      a {
-        display: block;
+
+      .avatar {
+        width: 50px;
+        height: 50px;
+        border-radius: 8px;
         overflow: hidden;
-        position: absolute;
-        top: 0;
-        left: 0;
-        width: 100%;
-        height: 100%;
-        outline: none;
-        text-indent: 100%;
+        img {
+          display: block;
+          width: 100%;
+          height: 100%;
+
+        }
+      }
+      .name {
+        font: 500 18px/24px $fontMain;
+        color: $background;
       }
     }
   }
