angular auth tested, chart in progress

--- a/ui/src/app/components/main/chart/chart.component.html
+++ b/ui/src/app/components/main/chart/chart.component.html
@@ -3,6 +3,7 @@
     <div class="chart-card" *ngFor="let user of users" (click)="goToStock(user.vkId)">
       <div class="avatar"><img src="{{user.avatar}}" alt="{{user.name}}"/></div>
       <div class="name">{{user.name}}</div>
+      <div class="value">{{user.albumSize}}</div>
     </div>
   </div>
 </div>
