--- a/ui/src/app/components/shared/header/header.component.scss
+++ b/ui/src/app/components/shared/header/header.component.scss
@@ -66,4 +66,9 @@ header {
       background-size: contain;
     }
   }
+
+  .album-size {
+    font: 500 14px/18px $fontMain;
+    color: $background;
+  }
 }
