--- a/ui/src/app/components/public/stock/stock.component.scss
+++ b/ui/src/app/components/public/stock/stock.component.scss
@@ -38,18 +38,153 @@
               object-fit: cover;
             }
 
-            .pix-selector {
+            .pix-btn {
               position: absolute;
-              width: 100%;
-              height: 100%;
               top: 0;
               left: 0;
+              width: 100%;
+              height: 100%;
+            }
+
+            .pix-selector {
+              position: absolute;
+              top: 20px;
+              right: 20px;
+              width: 20px;
+              height: 20px;
+              border: 1px solid $background;
+              border-radius: 10px;
               transition: background 200ms;
               background: transparent;
 
               &:hover {
                 background: fade-out($background, .5);
               }
+            }
+          }
+        }
+      }
+
+      .bottom-panel {
+        position: absolute;
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        padding: 0 15px;
+        width: 100%;
+        height: 60px;
+        bottom: 0;
+        left: 0;
+        border-radius: 8px 8px 0 0;
+        background: #252525e8;
+        .pix-per-page {
+          width: 80px;
+          .select {
+            cursor: pointer;
+            transition: color 100ms ease;
+            font: 500 14px/18px $fontMain;
+            user-select: none;
+            color: $background;
+            &:hover {
+              color: lighten($background, 10%);
+            }
+          }
+          .button {
+            position: absolute;
+            top: -40px;
+            margin: 0;
+            height: 30px;
+            width: 50px;
+            box-shadow: -2px -6px 10px rgba(232, 237, 243, 0.05), 2px 12px 64px #4B4B4B, inset -2px -6px 10px rgba(248, 249, 249, 0.03);
+            .label {
+              font-size: 14px;
+            }
+            &.ppp50 {
+              left: 10px;
+            }
+            &.ppp100 {
+              left: 70px;
+            }
+            &.ppp200 {
+              left: 130px;
+
+            }
+          }
+        }
+        .paginator {
+          display: flex;
+          justify-content: center;
+          align-items: center;
+          font: 500 14px/18px $fontMain;
+          color: $background;
+          .btn-page {
+            position: relative;
+            display: flex;
+            flex-direction: row;
+            justify-content: center;
+            align-items: center;
+            flex-shrink: 0;
+            width: 30px;
+            height: 30px;
+            background: #4D4D4D;
+            outline: none;
+            border: none;
+            border-radius: 8px;
+            cursor: pointer;
+            text-decoration: none;
+            transition: background 100ms ease;
+            box-shadow: -2px -6px 10px rgba(232, 237, 243, 0.05), 2px 12px 64px #4B4B4B, inset -2px -6px 10px rgba(248, 249, 249, 0.03);
+            font: 500 14px/18px "Roboto", sans-serif;
+            text-align: center;
+            color: $dark;
+            &.backward {}
+            &.forward {}
+            &:hover {
+              background: lighten($dark, 10%);
+            }
+          }
+          .pages {
+            padding: 0 20px;
+          }
+        }
+        .download {
+          width: 80px;
+          display: flex;
+          align-items: center;
+          justify-content: flex-end;
+          .select {
+            cursor: pointer;
+            transition: color 100ms ease;
+            font: 500 14px/18px $fontMain;
+            user-select: none;
+            color: $background;
+            &:hover {
+              color: lighten($background, 10%);
+            }
+          }
+          .button {
+            position: absolute;
+            top: -40px;
+            margin: 0;
+            height: 30px;
+            width: 100px;
+            box-shadow: -2px -6px 10px rgba(232, 237, 243, 0.05), 2px 12px 64px #4B4B4B, inset -2px -6px 10px rgba(248, 249, 249, 0.03);
+            .label {
+              font-size: 14px;
+            }
+
+            &.selected {
+              pointer-events: none;
+              right: 230px;
+              width: auto;
+            }
+
+            &.download {
+              right: 120px;
+            }
+
+            &.select-all {
+              right: 10px;
             }
           }
         }
