--- a/ui/src/app/components/public/stock/stock.component.html
+++ b/ui/src/app/components/public/stock/stock.component.html
@@ -5,8 +5,8 @@
     <div class="gallery">
       <div class="pixies" *ngIf="user">
         <!-- (props.pixArray.length) && props.pixArray.slice(props.cutFrom - 1, props.cutTo + 3)-->
-        <div class="pix" *ngFor="let pix of user.pixArray; index as i">
-          <div class="pix-container" *ngIf="pix.inViewport">
+        <div class="pix" *ngFor="let pix of pixInViewport; index as i">
+          <div class="pix-container">
             <img class="pix-img" src="{{pix.url}}" alt="{{pix.url}}"/>
             <div class="pix-btn" (mouseenter)="pixHoveredStart($event, pix, i)" (mouseleave)="pixHoveredEnd($event, pix, i)"></div>
             <div class="pix-selector" *ngIf="pix.selected || pix.hovered" (click)="pixSelectorClickHandler($event, pix, i)">
