--- a/ui/src/app/components/public/stock/stock.component.scss
+++ b/ui/src/app/components/public/stock/stock.component.scss
@@ -66,7 +66,7 @@
       }
 
       .bottom-panel {
-        position: absolute;
+        position: fixed;
         display: flex;
         justify-content: space-between;
         align-items: center;
