ui stock page updates

--- a/ui/src/app/components/shared/header/header.component.html
+++ b/ui/src/app/components/shared/header/header.component.html
@@ -3,7 +3,7 @@
     <span class="icon"></span>
   </div>
   <div class="album-size" *ngIf="user">
-    {{user.albumSize}} total
+    total {{user.albumSize}} pix
   </div>
   <div class="profile" *ngIf="user">
         <a class="user-avatar" href="{{href}}" target="_blank" rel="noopener noreferrer">
