--- a/ui/src/app/components/public/stock/stock.component.html
+++ b/ui/src/app/components/public/stock/stock.component.html
@@ -31,7 +31,7 @@
 
         <div class="paginator">
           <button class="btn-page backward" (click)="paginatorClickHandler('backward')"><</button>
-          <span class="pages"><span class="page-current">{{paginatorPageCurrent}}</span> of <span class="page-total">{{paginatorPageCurrent}}</span></span>
+          <span class="pages"><span class="page-current">{{paginatorPageCurrent}}</span> of <span class="page-total">{{paginatorPageTotal}}</span></span>
           <button class="btn-page backward" (click)="paginatorClickHandler('forward')">></button>
         </div>
 
