--- a/ui/src/app/components/shared/header/header.component.html
+++ b/ui/src/app/components/shared/header/header.component.html
@@ -2,12 +2,10 @@
   <div class="settings">
     <span class="icon"></span>
   </div>
-  <div class="album-size" *ngIf="user">
-    total {{user.albumSize}} pix
-  </div>
   <div class="profile" *ngIf="user">
-        <a class="user-avatar" href="{{href}}" target="_blank" rel="noopener noreferrer">
-          <img class="pix-img" src="{{user.avatar}}" alt="{{user.name}}"/>
-        </a>
+    <span class="album-size">total pix <br> <span class="val">{{user.albumSize}}</span></span>
+    <a class="user-avatar" href="{{href}}" target="_blank" rel="noopener noreferrer">
+      <img class="pix-img" src="{{user.avatar}}" alt="{{user.name}}"/>
+    </a>
   </div>
 </header>
