--- a/ui/src/app/components/shared/header/header.component.scss
+++ b/ui/src/app/components/shared/header/header.component.scss
@@ -34,8 +34,6 @@ header {
       height: 36px;
       border-radius: 20px;
       overflow: hidden;
-      position: absolute;
-      left: 10px;
       img {
         width: 100%;
         height: 100%;
@@ -52,6 +50,14 @@ header {
     width: auto;
     padding-left: 50px;
     position: relative;
+    .album-size {
+      width: 60px;
+      font: 500 12px/18px $fontMain;
+      color: $background;
+      .val {
+        font-weight: bold;
+      }
+    }
   }
 
   .settings {
@@ -65,10 +71,5 @@ header {
       background-position: 50%;
       background-size: contain;
     }
-  }
-
-  .album-size {
-    font: 500 14px/18px $fontMain;
-    color: $background;
   }
 }
