--- a/ui/src/app/components/public/stock/stock.component.scss
+++ b/ui/src/app/components/public/stock/stock.component.scss
@@ -47,15 +47,26 @@
             }
 
             .pix-selector {
+              display: flex;
+              justify-content: center;
+              align-items: center;
               position: absolute;
-              top: 20px;
-              right: 20px;
+              top: 10px;
+              right: 10px;
               width: 20px;
               height: 20px;
               border: 1px solid $background;
               border-radius: 10px;
               transition: background 200ms;
               background: transparent;
+
+              .selected {
+                display: block;
+                width: 10px;
+                height: 10px;
+                border-radius: 10px;
+                background: $background;;
+              }
 
               &:hover {
                 background: fade-out($background, .5);
