ui stock page updates

--- a/ui/src/app/components/public/stock/stock.component.html
+++ b/ui/src/app/components/public/stock/stock.component.html
@@ -44,7 +44,7 @@
             <div class="label">Download</div>
           </a>
           <a class="button select-all" (click)="selectAll()" *ngIf="selectMode">
-            <div class="label"><span *ngIf="!selectAllPix">Select</span><span *ngIf="selectAllPix">Unselect</span> all</div>
+            <div class="label"><span *ngIf="!selectAllPix">Select all</span><span *ngIf="selectAllPix">Unselect</span></div>
           </a>
         </div>
       </div>
