--- a/ui/src/app/components/public/stock/stock.component.scss
+++ b/ui/src/app/components/public/stock/stock.component.scss
@@ -62,10 +62,10 @@
 
               .selected {
                 display: block;
-                width: 10px;
-                height: 10px;
+                width: 16px;
+                height: 16px;
                 border-radius: 10px;
-                background: $background;;
+                background: darken($background, 10%);
               }
 
               &:hover {
