--- a/ui/src/app/components/shared/header/header.component.html
+++ b/ui/src/app/components/shared/header/header.component.html
@@ -1,5 +1,5 @@
 <header>
-  <div class="settings">
+  <div class="settings" [routerLink]="['/']">
     <span class="icon"></span>
   </div>
   <div class="profile" *ngIf="user">
