ui stock page updates

--- a/ui/src/app/components/public/stock/stock.component.html
+++ b/ui/src/app/components/public/stock/stock.component.html
@@ -17,7 +17,7 @@
       </div>
       <div class="bottom-panel">
         <div class="pix-per-page">
-          <a class="select"  (click)="pppClickHandler()">Pix p.page</a>
+          <a class="select"  (click)="pppClickHandler()">{{pixPerPage}} on page</a>
           <a class="button ppp50" (click)="pixPerPageHandler(50)" *ngIf="pppMode">
             <div class="label">50</div>
           </a>
