--- a/ui/src/app/components/shared/header/header.component.scss
+++ b/ui/src/app/components/shared/header/header.component.scss
@@ -52,10 +52,13 @@ header {
     position: relative;
     .album-size {
       width: 60px;
+      margin-right: 10px;
       font: 500 12px/18px $fontMain;
+      text-align: right;
       color: $background;
       .val {
-        font-weight: bold;
+        font-size: 14px;
+        font-weight: 900;
       }
     }
   }
