ui stock page updates

--- a/ui/src/app/components/shared/header/header.component.html
+++ b/ui/src/app/components/shared/header/header.component.html
@@ -5,7 +5,7 @@
   <div class="profile" *ngIf="user">
     <span class="album-size">total pix <br> <span class="val">{{user.albumSize}}</span></span>
     <a class="user-avatar" href="{{href}}" target="_blank" rel="noopener noreferrer">
-      <img class="pix-img" src="{{user.avatar}}" alt="{{user.name}}"/>
+      <img class="pix-img" src="{{user.avatar}}"/>
     </a>
   </div>
 </header>
