--- a/ui/src/app/components/main/chart/chart.component.scss
+++ b/ui/src/app/components/main/chart/chart.component.scss
@@ -22,7 +22,7 @@
       height: 80px;
       border-radius: 10px;
       padding: 20px;
-      box-shadow: -12px -20px 56px rgba(232, 237, 243, 0.05), 36px 12px 64px #4B4B4B, inset -16px -6px 80px rgba(248, 249, 249, 0.03);
+      //box-shadow: -12px -20px 56px rgba(232, 237, 243, 0.05), 36px 12px 64px #4B4B4B, inset -16px -6px 80px rgba(248, 249, 249, 0.03);
       transition: background 100ms ease;
       &:hover {
         background: lighten($dark, 10%);
