ui stock page updates

--- a/ui/src/app/components/shared/header/header.component.scss
+++ b/ui/src/app/components/shared/header/header.component.scss
@@ -17,6 +17,7 @@ header {
     align-items: center;
     justify-content: center;
     cursor: pointer;
+    outline: none;
     height: 100%;
     padding: 0 10px;
     font-family: "Noto Color Emoji", "Apple Color Emoji", "Segoe UI Emoji",
