--- a/ui/src/app/components/public/stock/stock.component.html
+++ b/ui/src/app/components/public/stock/stock.component.html
@@ -8,7 +8,7 @@
         <div class="pix" *ngFor="let pix of pixInViewport; index as i">
           <div class="pix-container" (mouseenter)="pixHoveredStart($event, pix, i)" (mouseleave)="pixHoveredEnd($event, pix, i)">
             <img class="pix-img" src="{{pix.url}}" alt="{{pix.url}}"/>
-            <div class="pix-btn"></div>
+            <div class="pix-btn" *ngIf="pix.hovered"></div>
             <div class="pix-selector" *ngIf="pix.selected || selectMode" (click)="pixSelectorClickHandler($event, pix, i)">
               <span class="selected" *ngIf="pix.selected"></span>
             </div>
