--- a/ui/src/app/components/public/stock/stock.component.scss
+++ b/ui/src/app/components/public/stock/stock.component.scss
@@ -44,6 +44,7 @@
               left: 0;
               width: 100%;
               height: 100%;
+              background: #25252594;
             }
 
             .pix-selector {
