--- a/ui/src/app/components/public/stock/stock.component.scss
+++ b/ui/src/app/components/public/stock/stock.component.scss
@@ -157,13 +157,8 @@
           }
           .pages {
             padding: 0 20px;
-            .page-total {
-              user-select: none;
-              cursor: pointer;
-              &:hover {
-                color: lighten($background, 10%);
-              }
-            }
+            user-select: none;
+            .page-total {}
           }
         }
         .download {
