--- a/ui/src/app/components/public/stock/stock.component.scss
+++ b/ui/src/app/components/public/stock/stock.component.scss
@@ -82,7 +82,7 @@
         display: flex;
         justify-content: space-between;
         align-items: center;
-        padding: 0 15px;
+        padding: 0 10px;
         width: 100%;
         height: 60px;
         bottom: 0;
@@ -168,13 +168,19 @@
           align-items: center;
           justify-content: flex-end;
           .select {
+            position: relative;
+            right: -5px;
             cursor: pointer;
             transition: color 100ms ease;
             font: 500 14px/18px $fontMain;
             user-select: none;
-            color: $background;
+            width: 36px;
+            height: 36px;
+            mask-image: url("../../../../assets/images/save.svg");
+            mask-size: cover;
+            background: $background;
             &:hover {
-              color: lighten($background, 10%);
+              background: lighten($dark, 10%);
             }
           }
           .button {
@@ -192,6 +198,34 @@
               pointer-events: none;
               right: 230px;
               width: auto;
+              .label {
+                font-size: 14px;
+              }
+              .deselect {
+                pointer-events: all;
+                position: absolute;
+                width: 20px;
+                height: 20px;
+                left: -5px;
+                top: -10px;
+                border-radius: 10px;
+                background: $dark;
+                span {
+                  position: absolute;
+                  width: 12px;
+                  height: 2px;
+                  left: 4px;
+                  top: 50%;
+                  margin-top: -1px;
+                  background: $background;
+                  &:nth-child(1) {
+                    transform: rotate(45deg);
+                  }
+                  &:nth-child(2) {
+                    transform: rotate(-45deg);
+                  }
+                }
+              }
             }
 
             &.download {
