--- a/ui/src/app/components/public/stock/stock.component.html
+++ b/ui/src/app/components/public/stock/stock.component.html
@@ -13,13 +13,13 @@
         <div class="album-size">{{user.albumSize}}</div>
       </div>
     </div>
-    <div class="gallery" [ngClass]="selfStock ? 'with-user-info' : ''">
+    <div class="gallery" [ngClass]="selfStock ? '' : 'with-user-info'">
       <div class="pixies" *ngIf="user">
         <!-- (props.pixArray.length) && props.pixArray.slice(props.cutFrom - 1, props.cutTo + 3)-->
         <div class="pix" *ngFor="let pix of pixInViewport; index as i">
           <div class="pix-container" (mouseenter)="pixHoveredStart($event, pix, i)" (mouseleave)="pixHoveredEnd($event, pix, i)">
             <img class="pix-img" src="{{pix.url}}" alt="{{pix.url}}"/>
-            <div class="pix-btn" *ngIf="pix.hovered"></div>
+            <div class="pix-btn" *ngIf="pix.hovered" (click)="openViewer($event, pix, i)"></div>
             <div class="pix-selector" *ngIf="selectMode" (click)="pixSelectorClickHandler($event, pix, i)">
               <span class="selected" *ngIf="pix.selected"></span>
             </div>
@@ -70,4 +70,10 @@
       </div>
     </div>
   </div>
+
+  <app-viewer
+    *ngIf="viewerOpened"
+    [viewer]="viewer"
+    (event)="viewerEvent()"
+  ></app-viewer>
 </div>
