ui stock page updates

--- a/ui/src/app/components/public/stock/stock.component.scss
+++ b/ui/src/app/components/public/stock/stock.component.scss
@@ -33,6 +33,7 @@
         }
         .album-size {
           font: 500 100px/0px $fontMain;
+          color: $background;
           margin-left: 15px;
           margin-top: -50px;
         }
